--- a/frontend/src/components/admin/css/body.css
+++ b/frontend/src/components/admin/css/body.css
@@ -32,7 +32,7 @@ body {
     width: 100%;
     overflow: hidden;
     transition: all 0.35s ease-in-out;
-    background-color: #a09898;
+    background-color: #ffffff;
     min-width: 0;
 }
 
@@ -47,8 +47,7 @@ body {
     min-width: 70px;
     z-index: 1000;
     transition: all .25s ease-in-out;
-     background-color: #0e2238; 
-    background-color:#332D2D;
+    background-color:#000000;
     display: flex;
     display: flex;
     flex-direction: column;
@@ -58,6 +57,13 @@ body {
     width: 260px;
     min-width: 260px;
 } */
+
+.movies-status-header{
+    color: #ffffff;
+    text-align: center;
+    font-size: 15px;
+    font-weight: bold;
+}
 
 .toggle-btn {
     background-color: transparent;
