--- a/frontend/src/components/admin/css/homepageadmin.css
+++ b/frontend/src/components/admin/css/homepageadmin.css
@@ -3,3 +3,126 @@
     background: linear-gradient(90deg, rgba(6,41,82,1) 8%, rgba(14,1,1,1) 56%, rgba(36,4,57,1) 100%);
     height: 100vh;
 }
+.custom1{
+    color:rgb(152, 143, 160)
+    
+}
+
+.btn-custom{
+    background-color: black;
+}
+
+.outer-brand{
+   color: rgb(27, 123, 192);
+   
+   font-style: italic;
+   /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+   font-size: 20px;
+  
+
+}
+.inner-brand{
+    color: rgb(159, 169, 170);
+    
+ 
+
+}
+/* .btn-custom{
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 8%, rgba(25,201,201,1) 56%, rgba(175,6,145,1) 100%);;
+
+} */
+
+
+hr.divider {
+    height: 0.2rem;
+    max-width: 3.25rem;
+    margin: 1.5rem auto;
+    opacity: 1;
+}
+
+hr.divider-light {
+    background-color: rgb(255, 255, 255);
+}
+
+.btn-xl {
+    padding: 1.25rem 2.25rem;
+    font-size: 0.85rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 10rem;
+}
+
+header.masthead {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+
+}
+
+    #portfolio {
+        .container-fluid {
+            max-width: 1920px;
+    
+            .portfolio-box {
+                position: relative;
+                display: block;
+    
+                .portfolio-box-caption {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
+    
+                    width: 100%;
+                    height: 100%;
+    
+                    position: absolute;
+                    bottom: 0;
+    
+                    text-align: center;
+                    opacity: 0;
+    
+                    color: white;
+                    background: fade-out(primary, 0.1);
+                    transition: opacity 0.25s ease;
+                    text-align: center;
+    
+                    .project-category {
+                        font-family: font-family-sans-serif;
+                        font-size: 0.85rem;
+                        font-weight: 600;
+                        text-transform: uppercase;
+                    }
+    
+                    .project-name {
+                        font-size: 1.2rem;
+                    }
+                }
+    
+                &:hover {
+                    .portfolio-box-caption {
+                        opacity: 1;
+                    }
+                }
+            }
+        }
+    
+    }
+
+    h1 {
+        font-size: 2.25rem;
+    }
+
+
+
+
+.page-section {
+    padding: 6rem 0;
+}
+
+
+.text-white-75 {
+    color: fade-out(white, 0.25) !important;
+}
