--- a/frontend/src/components/admin/css/body.css
+++ b/frontend/src/components/admin/css/body.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
+.pacifico-regular {
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+
+
+
+
 ::after,
 ::before {
     box-sizing: border-box;
@@ -42,15 +52,16 @@ body {
 }
 
 #sidebar {
-    width: 260px;
-    height:93vh;
+    width: 230px;
+    height:auto;
     min-width: 70px;
     z-index: 1000;
     transition: all .25s ease-in-out;
-    background-color:#000000;
     display: flex;
     display: flex;
     flex-direction: column;
+    background-color: rgb(1, 72, 159);
+
 }
 
 /* #sidebar.expand {
@@ -61,10 +72,19 @@ body {
 .movies-status-header{
     color: #ffffff;
     text-align: center;
-    font-size: 15px;
+    font-size: 12px;
     font-weight: bold;
 }
 
+.movies-status-header:hover{
+ background-color: #ede9ed;
+}
+
+.btn-add{
+    border-radius: 60px;
+    padding: 10px;
+    font-size:15px;
+}
 .toggle-btn {
     background-color: transparent;
     cursor: pointer;
@@ -129,7 +149,7 @@ a.sidebar-link {
 
 a.sidebar-link:hover {
     background-color: rgba(255, 255, 255, .075);
-    border-left: 3px solid #9426ac;
+    border-left: 3px solid #ffffff;
 }
 
 .sidebar-item {
