--- a/frontend/src/components/customer/css/Show.css
+++ b/frontend/src/components/customer/css/Show.css
@@ -38,14 +38,14 @@
   width: 10rem;
 }
 
-.card {
+.card-e {
   background: #424242;
   border: 0px;
   border-radius: 0.3rem;
   width: 100%;
 }
 
-.card-header {
+.card-header-e {
   background:  #212121;
   &::before {
     content: '';
