--- a/frontend/src/components/customer/css/Show.css
+++ b/frontend/src/components/customer/css/Show.css
@@ -56,14 +56,25 @@
   }
 }
 
+.show-heading {
+
+  background-color: #000000;
+
+
+
+}
+
+
+
 .tag {
   position: relative;
-  padding: 12px 25px;
+  padding: 10px 20px;
   border: solid  #212121;
   border-width: 1px 1px 1px 0;
   border-radius: 0 12.5px 12.5px 0;
-  background-image: linear-gradient( #212121, #303030);
-  box-shadow: 2px 2px 1px -1px rgba(0, 0, 0, 0.2), 2px 2px 1px -1px rgba(0, 0, 0, 0.14), 2px 2px 1px -1px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+  /* background-image: linear-gradient( #212121, #303030);
+  box-shadow: 2px 2px 1px -1px rgba(0, 0, 0, 0.2), 2px 2px 1px -1px rgba(0, 0, 0, 0.14), 2px 2px 1px -1px rgba(0, 0, 0, 0.12); */
   transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
   &::before {
     content: "";
@@ -91,4 +102,53 @@
   &:hover {
     box-shadow: 16px 12px 6px rgba(0, 0, 0, 0.2), 12px 8px 12px rgba(0, 0, 0, 0.14), 4px 4px 4px rgba(0, 0, 0, 0.12);
   }
+}
+
+
+
+.date-tag{
+  background-color: #000000;
+  border: solid  #585656;
+  
+
+
+}
+
+.date-tag:hover{
+  /* background-color: #f21111; */
+  border: solid  #225bcb;
+
+
+}
+
+
+.time-tag{
+  background-color: #8e8d8d;
+  cursor: pointer;
+  font-weight: 700;
+  
+ /* border-radius:10px; */
+
+}
+
+.time-tag .time{
+  color: #1575cf;
+}
+
+
+.time-tag:hover{
+  background-color: #1575cf;
+  color:white
+
+
+
+}
+
+.date-active{
+  border: solid  #225bcb;
+
+}
+
+.h66{
+  font-size: 10px;
 }
