--- a/frontend/src/components/customer/css/navbar.css
+++ b/frontend/src/components/customer/css/navbar.css
@@ -4,11 +4,14 @@
      */
 
 /* background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(3,24,28,1) 50%, rgba(90,4,94,1) 100%); */
-
+/* 
 background: rgb(0,0,0);
-background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(28,3,23,1) 50%, rgba(14,90,153,1) 100%); 
+background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(28,3,23,1) 50%, rgba(14,90,153,1) 100%);  */
+/* height: 50px; */
 
 /* background:white */
+background:black;
+padding: 20px;
 }
 
 .ourlogo{
@@ -17,6 +20,7 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(28,3,23,1) 50%, rgba(1
 
 .navboy-item{
     color: rgb(238, 238, 238);
+    font-size:12px;
    
 }
 
