--- a/frontend/src/components/customer/css/selectshow.css
+++ b/frontend/src/components/customer/css/selectshow.css
@@ -1,6 +1,7 @@
 
 .show-main{
-    background-color: #1306ca;
+  background: rgb(0,0,0);
+background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(3,1,19,1) 48%, rgba(0,0,0,1) 98%);
   margin-top: 50px;
   display: flex;
   flex-direction: row;
@@ -8,33 +9,125 @@
 
 }
 
+
+/* -------------------------seats----------------------------------- */
+
 .seat-page{
     /* margin-left:100px; */
-     padding: 50px;
-     padding-top:25px;
-     background-color: #242333;
+     padding-top: 30px;
+   
+     margin-top:35px;
+     /* background-color: #ffffff; */
+     /* opacity: 0.1;
+      */
+     background-color: rgb(8, 7, 7);
+  background-color: rgba(8, 7, 7, 0.442);
+
      color: white;
      align-items: center;
      justify-content: center;
    
      font-family: 'Lato', 'sans-serif';
 }
-.show-page {
-  /* background-color: red; */
-  background: rgb(0,0,0);
-background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(28,3,23,1) 50%, rgba(14,90,153,1) 100%); 
+.seat-section {
+  /* background: transparent; */
+  text-align: center;
+  /* background-color: rgba(8, 7, 7, 0.442); */
+
+  /* padding-top: 60px; */
 }
 
 .seat {
     background-color: #444451;
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
     margin: 3px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    /* border-top-left-radius: 10px; */
+    /* border-top-right-radius: 10px; */
+    border-radius:5px;
   }
 
-  .row {
+  .seat-row {
     display: flex;
+    padding-left: 10%;
+    padding-right: 10%;
   }
   
+  .seat.selected {
+    background-color: #158dc1;
+  }
+  
+  .seat.occupied {
+    background-color: #fff;
+  }
+  
+
+  /* .seat:nth-of-type(2) {
+    margin-right: 18px;
+  }
+  
+  .seat:nth-last-of-type(2) {
+    margin-left: 18px;
+  } */
+  
+
+  .seat:not(.occupied):hover {
+    cursor: pointer;
+    transform: scale(1.2);
+  }
+
+  .showcase .seat:not(.occupied):hover {
+    cursor: default;
+    transform: scale(1);
+  }
+
+  .showcase {
+    background-color: rgba(0, 0, 0, 0.1);
+    padding: 5px 10px;
+    border-radius: 5px;
+    color: #777;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .showcase li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 10px;
+  }
+  
+  .showcase li small {
+    margin-left: 10px;
+  }
+
+  .screen {
+    
+    background-color: #000000;
+    height: 20px;
+    width: 50%;
+    margin: 15px 0;
+    transform: rotateX(-45deg);
+    box-shadow: 0 3px 10px rgba(255, 255, 255, 0.75);
+  }
+
+  p.text {
+    margin: 10px 0;
+    font-size: 20px;
+  }
+  
+  p.text span {
+    color: #6feaf6;
+  }
+
+  .container-hall {
+    perspective: 1000px;
+    margin-bottom: 30px;
+  }
+
+  .bk-txt{
+    font-size:20px;
+ 
+
+  }
