--- a/frontend/src/components/customer/css/navbar.css
+++ b/frontend/src/components/customer/css/navbar.css
@@ -1,25 +1,10 @@
 .NAVBOY{
-
-    /* background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(1,15,7,1) 50%, rgba(10,142,114,1) 100%);
-     */
-
-/* background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(3,24,28,1) 50%, rgba(90,4,94,1) 100%); */
-/* 
-background: rgb(0,0,0);
-background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(28,3,23,1) 50%, rgba(14,90,153,1) 100%);  */
-/* height: 50px; */
-
-/* background:white */
 background:rgb(0, 0, 0);
 padding: 10px;
-}
-
-.ourlogo{
-   color: rgb(224, 15, 15);
+/* position: sticky; */
 }
 
 .navboy-item{
-    color: rgb(238, 238, 238);
     font-size:12px;
    
 }
@@ -30,8 +15,4 @@ padding: 10px;
     font-style: italic;
     color: rgb(35, 87, 185);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.navboy-item-link :hover{
-    color: aqua;
 }
