--- a/frontend/src/components/customer/css/selectshow.css
+++ b/frontend/src/components/customer/css/selectshow.css
@@ -45,20 +45,22 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(3,1,19,1) 48%, rgba(0,
     /* border-top-left-radius: 10px; */
     /* border-top-right-radius: 10px; */
     border-radius:5px;
+    border:0px;
   }
 
   .seat-row {
-    display: flex;
+    /* display: flex; */
     padding-left: 10%;
     padding-right: 10%;
   }
   
   .seat.selected {
-    background-color: #158dc1;
+    background-color: #2684ff;
   }
   
   .seat.occupied {
     background-color: #fff;
+    cursor: not-allowed;
   }
   
 
