--- a/frontend/src/components/customer/css/Layout.css
+++ b/frontend/src/components/customer/css/Layout.css
@@ -35,7 +35,7 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(5,4,64,1) 43%, rgba(44
   display: block;
   width: 800px;
   height: 350px;
-  margin: 100px auto; 
+  /* margin : 50px 100px 50px 230px; */
   overflow: hidden;
   border-radius: 10px;
   transition: all 0.4s;
@@ -107,7 +107,7 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(5,4,64,1) 43%, rgba(44
           color: rgba(255, 255, 255, 0.189);
           transition: color 0.3s;
           transition-delay: 0.15s;
-          margin:80px 10px;
+          margin:75px 10px;
           &:hover{
             transition: color 0.3s;
             color: rgba(0, 255, 166, 0.8);
@@ -198,9 +198,9 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(5,4,64,1) 43%, rgba(44
 } */
 
 #tomb{
-  box-shadow: 0px 0px 150px -45px rgba(14, 138, 240, 0.6);
+  box-shadow: 0px 0px 150px -45px rgba(29, 150, 248, 0.777);
   &:hover{
-    box-shadow: 0px 0px 150px -35px rgba(19, 160, 134, 0.6);
+    box-shadow: 0px 0px 150px -35px rgba(0, 255, 166, 0.8);
   }
 }
 
@@ -220,4 +220,10 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(5,4,64,1) 43%, rgba(44
   /* background-color: red; */
   margin-top:80px;
   height:300px;
+}
+
+.movie-carousel{
+  margin : 10px 100px 0px 100px;
+  padding: 150px 15%;
+
 }
